{
  "version": 4,
  "terraform_version": "0.12.6",
  "serial": 78,
  "lineage": "b8c15fd4-4223-c273-c7e5-b1e1a700723b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "inst1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07d0cf3af28718ef8",
            "arn": "arn:aws:ec2:us-east-1:587282778384:instance/i-0e7acd94bd1fc1229",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0e7acd94bd1fc1229",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0f9dc699e70a592c0",
            "private_dns": "ip-10-0-1-173.ec2.internal",
            "private_ip": "10.0.1.173",
            "public_ip": "52.91.241.98",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-053076c77bcc840ca",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0654650821515d04e",
            "tags": {
              "Name": "awsins"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-036af0ad1829d79aa"
            ]
          },
          "depends_on": [
            "aws_security_group.sg",
            "aws_subnet.sub1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-09af6f33cff716737",
            "owner_id": "587282778384",
            "tags": {
              "Name": "igw"
            },
            "vpc_id": "vpc-015446b0435567cf4"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06ae99eb34add680e",
            "owner_id": "587282778384",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09af6f33cff716737",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-015446b0435567cf4"
          },
          "depends_on": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ra",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007e1d50f55c4aff5",
            "route_table_id": "rtb-06ae99eb34add680e",
            "subnet_id": "subnet-0654650821515d04e"
          },
          "depends_on": [
            "aws_route_table.r",
            "aws_subnet.sub1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:587282778384:security-group/sg-036af0ad1829d79aa",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-036af0ad1829d79aa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "sg1",
            "name_prefix": null,
            "owner_id": "587282778384",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-015446b0435567cf4"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:587282778384:subnet/subnet-0654650821515d04e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0654650821515d04e",
            "map_public_ip_on_launch": false,
            "owner_id": "587282778384",
            "tags": {
              "Name": "tfsub1"
            },
            "vpc_id": "vpc-015446b0435567cf4"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:587282778384:vpc/vpc-015446b0435567cf4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d02d6aa8cdc74ef2",
            "default_route_table_id": "rtb-056432ac19b5c1983",
            "default_security_group_id": "sg-0fe688062149d41a1",
            "dhcp_options_id": "dopt-7235d308",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-015446b0435567cf4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-056432ac19b5c1983",
            "owner_id": "587282778384",
            "tags": {
              "Name": "tfvpc"
            }
          }
        }
      ]
    }
  ]
}